--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@
 
 p {
     color: rgb(148, 81, 4);
-    font-style: italic;  
+    font-style: italic; 
+    line-height: 120%;
+    margin: .5em;
+    padding:.5em;
 }
 
 h1 {
@@ -17,6 +20,8 @@ h1 {
     font-size: 34px;
     margin: 2px;
     size: 34px;
+    margin: 0em;
+    padding:0em
 }
 
 h2 {
@@ -24,12 +29,14 @@ h2 {
     font-family: Arial, sans-serif;
     font-size: 32px; 
     margin: 10px;
+    padding: 0em;
 }
 h3 {
     color: rgb(250, 115, 4);
     font-family: Arial, sans-serif;
     font-size: 30px;
     margin: 3px;
+    padding: 0em;
 }
 h4 {
     color: rgb(229, 4, 250);
